--- a/qqz.css
+++ b/qqz.css
@@ -59,7 +59,7 @@ p img {
     width: 21px;
 }
 
-.kont {
+.kont { 
     display: inline;
 }
 
@@ -73,6 +73,10 @@ p img {
     padding: 5px;
 }
 
+.kontf:hover {
+    border: none;
+}
+
 .bil {
     height: 225px;
     width: 300px;
@@ -85,6 +89,7 @@ p img {
     color: rgb(244, 254, 255);
     text-align: left;
 }
+
 .München:hover {
     margin-top: -225px;
     color: rgb(244, 254, 255);
@@ -92,7 +97,7 @@ p img {
 }
 
 .butt {
-    position: absolute;
+    position: fixed;
     float: right;
     margin-top: 15px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -105,12 +110,10 @@ p img {
     border: 3px solid rgb(244, 254, 255);
 }
 
-.butt :hover {
-    color: rgb(1, 57, 58);
-    background: transparent;
+.butt:hover {
+    color:rgb(1, 57, 58);
     border: 4px solid rgb(1, 57, 58);
 }
-
 
 .kontf2 {
     position: fixed;
@@ -122,44 +125,9 @@ p img {
     padding: 5px;
 }
 
-.bil {
-    height: 225px;
-    width: 300px;
+.kontf2:hover {
+    border: none;
 }
-
-.München {
-    margin-top: -3px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 12px;
-    color: rgb(244, 254, 255);
-    text-align: left;
-}
-.München:hover {
-    margin-top: -225px;
-    color: rgb(244, 254, 255);
-    font-size: 17px;
-}
-
-.butt {
-    position: absolute;
-    float: right;
-    margin-top: 15px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    color: rgb(244, 254, 255);
-    height:40px;
-    width: 300px;
-    background: transparent;
-    border: 3px solid rgb(244, 254, 255);
-}
-
-.butt :hover {
-    color: rgb(1, 57, 58);
-    background: transparent;
-    border: 4px solid rgb(1, 57, 58);
-}
-
 
 .kontf3 {
     position: fixed;
@@ -171,28 +139,20 @@ p img {
     padding: 5px;
 }
 
-.bil {
-    height: 225px;
-    width: 300px;
+.kontf3:hover {
+    border: none;
 }
 
-.München {
-    margin-top: -3px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 12px;
-    color: rgb(244, 254, 255);
-    text-align: left;
-}
-.München:hover {
-    margin-top: -225px;
-    color: rgb(244, 254, 255);
-    font-size: 17px;
-}
-
-.butt {
+.footer {
     position: absolute;
-    float: right;
-    margin-top: 15px;
+    left: 60%;
+    top: 90%;
+}
+
+.butf {
+    margin-top: 42%;
+    margin-left: -370px;
+    position: absolute;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
     font-weight: bold;
@@ -203,16 +163,64 @@ p img {
     border: 3px solid rgb(244, 254, 255);
 }
 
-.butt :hover {
+.butf:hover {
     color: rgb(1, 57, 58);
-    background: transparent;
     border: 4px solid rgb(1, 57, 58);
 }
 
-.footer {
+.butfr{
+    margin-top: 42%;
+    margin-left: -210px;
     position: absolute;
-    left: 60%;
-    top: 90%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(244, 254, 255);
+    height:40px;
+    width: 300px;
+    background: transparent;
+    border: 3px solid rgb(244, 254, 255);
 }
 
+.butfr:hover {
+    color: rgb(1, 57, 58);
+    border: 4px solid rgb(1, 57, 58);
+}
 
+.butfh{
+    margin-top: 42%;
+    margin-left: -118px;
+    position: absolute;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(244, 254, 255);
+    height:40px;
+    width: 300px;
+    background: transparent;
+    border: 3px solid rgb(244, 254, 255);
+}
+
+.butfh:hover {
+    color: rgb(1, 57, 58);
+    border: 4px solid rgb(1, 57, 58);
+}
+
+.butft {
+    margin-top: 42%;
+    margin-left: -185px;
+    position: absolute;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(244, 254, 255);
+    height:40px;
+    width: 300px;
+    background: transparent;
+    border: 3px solid rgb(244, 254, 255);
+}
+
+.butft:hover {
+    color: rgb(1, 57, 58);
+    border: 4px solid rgb(1, 57, 58);
+}
