--- a/qqz.css
+++ b/qqz.css
@@ -224,3 +224,60 @@ p img {
     color: rgb(1, 57, 58);
     border: 4px solid rgb(1, 57, 58);
 }
+
+.butfe {
+    margin-top: 42%;
+    margin-left: -122px;
+    position: absolute;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(244, 254, 255);
+    height:40px;
+    width: 300px;
+    background: transparent;
+    border: 3px solid rgb(244, 254, 255);
+}
+
+.butfe:hover {
+    color: rgb(1, 57, 58);
+    border: 4px solid rgb(1, 57, 58);
+}
+
+.butfi {
+    margin-top: 42%;
+    margin-left: -546px;
+    position: absolute;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(244, 254, 255);
+    height:40px;
+    width: 300px;
+    background: transparent;
+    border: 3px solid rgb(244, 254, 255);
+}
+
+.butfi:hover {
+    color: rgb(1, 57, 58);
+    border: 4px solid rgb(1, 57, 58);
+}
+
+.butfm {
+    margin-top: 42%;
+    margin-left: -215px;
+    position: absolute;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(244, 254, 255);
+    height:40px;
+    width: 300px;
+    background: transparent;
+    border: 3px solid rgb(244, 254, 255);
+}
+
+.butfm:hover {
+    color: rgb(1, 57, 58);
+    border: 4px solid rgb(1, 57, 58);
+}
