--- a/qqzy.css
+++ b/qqzy.css
@@ -1,13 +1,10 @@
 body {
-    background-image: url(Bild/q.jpg);
+    background-image: url(Bild2/5q.jpg);
     background-size: cover;
 }
 
 a {
     text-decoration: none;
-}
-.nav {
-    background-color: aqua;
 }
 
 .logo {
@@ -19,14 +16,15 @@ a {
 .logoa {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 35px;
-    color: rgb(226, 224, 192);
+    color: rgb(142, 138, 137);
 }
 
 .logoa:hover {
-    color: rgb(1, 57, 58);
+    color: rgb(20, 20, 20);
 }
 
 .menu {
+    position: relative;
     float: right;
     margin-right: 1px;
     font-size: 15px;
@@ -34,7 +32,7 @@ a {
 
 .menua {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(244, 254, 255);
+    color: rgb(26, 26, 26);
     margin-right: 25px;
     font-size: 15px;
 }
@@ -42,13 +40,13 @@ a {
 .menua a {
     text-decoration: none;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(244, 254, 255);
+    color: rgb(26, 26, 26);
     margin-right: 25px;
     font-size: 15px;
 }
 
 .menua a:hover {
-    color: rgb(41, 82, 76);
+    color: rgb(142, 138, 137);
 }
 
 p img {
@@ -79,7 +77,7 @@ p img {
     position: relative;
     height: 380px;
     width: 300px;
-    border: 3px solid rgb(244, 254, 255);
+    border: 3px solid rgb(26, 26, 26);
     padding: 5px;
 }
 
@@ -96,7 +94,7 @@ p img {
     margin-top: -3px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 12px;
-    color: rgb(244, 254, 255);
+    color: rgb(20, 20, 20);
     text-align: left;
 }
 
@@ -109,16 +107,16 @@ p img {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
     font-weight: bold;
-    color: rgb(244, 254, 255);
+    color: rgb(26, 26, 26);
     height:40px;
     width: 300px;
     background: transparent;
-    border: 3px solid rgb(244, 254, 255);
+    border: 3px solid rgb(26, 26, 26);
 }
 
 .butt:hover {
-    color:rgb(1, 57, 58);
-    border: 4px solid rgb(1, 57, 58);
+    color: rgb(142, 138, 137);
+    border: 4px solid rgb(142, 138, 137);
 }
 
 .butf {
@@ -127,11 +125,11 @@ p img {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
     font-weight: bold;
-    color: rgb(244, 254, 255);
+    color: rgb(26, 26, 26);
     height:40px;
     width: 300px;
     background: transparent;
-    border: 3px solid rgb(244, 254, 255);
+    border: 3px solid rgb(26, 26, 26);
 }
 
 .footerb {
