--- a/qqq.css
+++ b/qqq.css
@@ -99,3 +99,90 @@ p img {
     float: right;
     margin-top: 90px;
 }
+
+
+.kont { 
+    display: inline-block;
+    padding-top: 50px;
+    padding-left: 100px;
+}
+
+.kontf {
+    display: inline-block;
+    margin-right: 60px;
+    position: relative;
+    height: 380px;
+    width: 300px;
+    border: 3px solid rgb(244, 254, 255);
+    padding: 5px;
+}
+
+.kontf:hover {
+    border: none;
+}
+
+.bil {
+    height: 225px;
+    width: 300px;
+}
+
+.München {
+    margin-top: -3px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 12px;
+    color: rgb(244, 254, 255);
+    text-align: left;
+}
+
+.München:hover {
+}
+
+.butt {
+    position: relative;
+    margin-top: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(244, 254, 255);
+    height:40px;
+    width: 300px;
+    background: transparent;
+    border: 3px solid rgb(244, 254, 255);
+}
+
+.butt:hover {
+    color:rgb(1, 57, 58);
+    border: 4px solid rgb(1, 57, 58);
+}
+
+.butf {
+    position: relative;
+    margin-left: 35px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(244, 254, 255);
+    height:40px;
+    width: 300px;
+    background: transparent;
+    border: 3px solid rgb(244, 254, 255);
+}
+
+.footerb {
+    display: inline-block;
+}
+
+.but {
+    margin-top: 40px;
+    display: inline-block;
+    margin-left: 35px;
+}
+
+.but1 {
+    margin-top: 40px;
+    display: inline-block;
+    margin-left: 35px;
+}
+.but1{
+    margin-right: 370px;
+}
