--- a/qq.css
+++ b/qq.css
@@ -3,6 +3,18 @@ body {
     background-size: cover;
 }
 
+.but {
+    height: 40px;
+    width: 120px;
+    border-radius: 12px;
+    border: 4px solid #7E7E7E;    
+    cursor: pointer;
+}
+
+.hide {
+    display: none;
+}
+
 .Thema {
     display: inline-block;
     text-align: center;
@@ -10,13 +22,12 @@ body {
     padding-left: 300px;
 }
 
-
 .thema {
-    display: inline-block;
     margin-top: 50px;
     border: 6px solid rgb(255, 255, 255);
     margin-left: 15px;
 }
+
 .thema a {
     font-size: 30px;
     text-decoration: none;
@@ -33,7 +44,6 @@ body {
 }
 
 .themad {
-    display: inline-block;
     margin-right: 15px;
     margin-top: 50px;
     border: 6px solid rgb(255, 255, 255);
