Ändern der Spielseite und Hinzufügen von Stilen

--- a/qqq.css
+++ b/qqq.css
@@ -83,6 +83,7 @@ p img {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(244, 254, 255);
     font-size: 35px;
+    font-weight: bold;
 }
 
 .butt {
