--- a/qqqy.css
+++ b/qqqy.css
@@ -130,6 +130,7 @@ p img {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(26, 26, 26);
     font-size: 35px;
+    font-weight: bolder;
 }
 
 .München {
