--- a/spiel.css
+++ b/spiel.css
@@ -1,30 +1,31 @@
 body {
-    background-image: url(Bild/wg.jpg);
+    background-image: url(Bild/gal2.jpg);
     background-size: cover;
 }
 
 .Begr {
+    text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .zurück {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-decoration: none;
-    color: rgb(31, 34, 34);
+    color: rgb(228, 238, 238);
     font-size: 14px;
 }
 
+.none {
+    display: none;   
+}
+
 .Spiel {
-    text-align: center;
 }
 
 .dasbild {
-    display: inline-block;
-    width: 300px;
-    padding: 5px;
-    border: 4px solid rgb(31, 34, 34);
+    margin-left: 30%;
+    width: 500px;
     text-align: center;
-    margin: 10px;
 }
 
 .dasbild:hover {
@@ -32,52 +33,55 @@ body {
 }
 
 .bild {
-    height: 200px;
-    width: 300px;
+    margin-top: 20px;
+    height: 300px;
+    width: 490px;
 }
 
 .bild:hover {
-    height: 220px;
-    width: 320px;
-    margin-left: -20px;
-    border: 7px solid #f3c13a;
+    position: absolute;
+    height: 320px;
+    width: 520px;
+    margin-left: -110px;
     
 }
 
 .am {
     text-decoration: none;
-    margin-top: 10px;
+    background-color: rgba(255, 255, 255, 0.378);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 18px;
     font-weight: bold;
-    color: rgb(31, 34, 34);
+    color: rgb(15, 15, 15);
 }
 
 .inp {
     width: 290px;
     height: 20px;
-    margin-top: 15px;
-    background-color: transparent;
-    border: 4px solid rgb(31, 34, 34);
+    margin-top: 30px;
+    border: 8px solid rgb(32, 33, 33);
+    border-radius: 12px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
     font-size: 15px;
     color: rgb(31, 34, 34);
 }
 
-#antwort {
+.antwort {
     cursor: pointer;
-    width: 80%;
-    height: 40px;
+    width: 44%;
+    height: 30px;
+    margin-top: 10px;
     border: 6px solid rgb(31, 34, 34);
+    border-radius: 12px;
     color: rgb(31, 34, 34);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     background-color: transparent;
     font-weight: bolder;
 }
 
-#antwort:hover {
+.antwort:hover {
     background: radial-gradient(#7e7e7e, #fff);
     color: rgb(255, 255, 255);
     border: 2px solid #7e7e7e;
